--- a/web/src/main/resources/templates/home.html
+++ b/web/src/main/resources/templates/home.html
@@ -29,7 +29,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Wallet</a>
+                        <a class="nav-link" href="/wallet">Wallet</a>
                     </li>
                 </ul>
                 <div>
