--- a/web/src/main/resources/templates/home.html
+++ b/web/src/main/resources/templates/home.html
@@ -60,7 +60,7 @@
                         <th>payment</th>
                         <th>method</th>
                         <th>rate</th>
-                        <th>asking range</th>
+                        <th>Quantity</th>
                     </tr>
                     <th:block th:each="order : ${buyOrders}">
                             <tr>
