--- a/web/src/main/resources/templates/home.html
+++ b/web/src/main/resources/templates/home.html
@@ -31,6 +31,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/wallet">Wallet</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/offer/all">Offers</a>
+                    </li>
                 </ul>
                 <div>
                     <div th:if="${signedin}==true">
