--- a/web/src/main/resources/templates/order.html
+++ b/web/src/main/resources/templates/order.html
@@ -8,36 +8,43 @@
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
-    <header class="navbar-static-top">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/">Peercoin</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Orders</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item dropdown-item-dark" href="#">View Orders</a>
-                            <a class="dropdown-item" href="/order/submit">Place Orders</a>
+        <header class="navbar-static-top" th:fragment="header">
+            <script th:src="@{/js/notification.js}"></script>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="/">Peercoin</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+    
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Orders</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item dropdown-item-dark" href="/order/all">View Orders</a>
+                                <a class="dropdown-item" href="/order/submit">Place Orders</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/wallet">Wallet</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/offer/all">Offers</a>
+                        </li>
+                    </ul>
+                    <div style="float:right;">
+                        <div id="notification-dropdown" class="dropdown" onmouseenter="receiveNotification();">
+                            <a class="btn btn-primary">Notifications</a>
+                            <div class="dropdown-content">
+                                <div id="notifications">
+                                </div>
+                            </div>
                         </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Wallet</a>
-                    </li>
-                </ul>
-                <div>
-                    <div th:if="${signedin}==true">
-                        <p th:text="${username}">username</p>
-                    </div>
-                    <div id="login" th:if="${signedin}==false">
-                        <a href="/login">Login</a>
-                        <a href="/register">register</a>
+                        <span>&ensp;&ensp;&ensp;</span>
+                        <span class="btn btn-primary" th:text="${username}">username</span>
                     </div>
                 </div>
             </div>
