--- a/web/src/main/resources/templates/order_form.html
+++ b/web/src/main/resources/templates/order_form.html
@@ -4,9 +4,12 @@
         <title>Post Ad</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <meta charset="utf-8">
+        <link rel="stylesheet" href="/css/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
     <body>
+        <div th:insert="~{order :: header}"></div>
+
         <ul class="nav nav-tabs">
             <li class="active nav-item"><a class="nav-link active" data-toggle="tab" href="#buy">Buy</a></li>
             <li class="nav-item"><a href="#sell" class="nav-link" data-toggle="tab">Sell</a></li>
