--- a/web/src/main/resources/templates/wallet.html
+++ b/web/src/main/resources/templates/wallet.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
+        <div th:insert="~{order :: header}"></div>
+
         <h1>Wallet</h1>
         <div class="container-sm order-container">
             <table class="table table-borderless table-dark">
