--- a/web/src/main/resources/static/css/style.css
+++ b/web/src/main/resources/static/css/style.css
@@ -12,3 +12,26 @@ body {
     padding-top: 10px;
     padding-bottom: 5px;
 }
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #000000;
+    min-width: 220px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.notification:hover {
+    background-color: #152a38;
+}
