--- a/web/src/main/resources/templates/home.html
+++ b/web/src/main/resources/templates/home.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>PeerCoin</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="/css/style.css">
-    </head>
+<head>
+    <title>PeerCoin</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="/css/style.css">
+    <script th:if="${signedin}" th:src="@{/js/notification.js}"></script>
+
+</head>
 
     <body>
-    <header class="navbar-static-top">
+    <header class="navbar-static-top" th:fragment="header">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="/">Peercoin</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,8 +38,17 @@
                     </li>
                 </ul>
                 <div>
-                    <div th:if="${signedin}==true">
-                        <p th:text="${username}">username</p>
+
+                    <div th:if="${signedin}==true" style="float:right;">
+                        <div id="notification-dropdown" class="dropdown" onmouseenter="receiveNotification();">
+                            <a class="btn btn-primary">Notifications</a>
+                            <div class="dropdown-content">
+                                <div id="notifications">
+                                </div>
+                            </div>
+                        </div>
+                        <span>&ensp;&ensp;&ensp;</span>
+                        <span class="btn btn-primary" th:text="${username}">username</span>
                     </div>
                     <div id="login" th:if="${signedin}==false">
                         <a href="/login">Login</a>
