--- a/web/src/main/resources/templates/orders.html
+++ b/web/src/main/resources/templates/orders.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+<div th:insert="~{order :: header}"></div>
+
 <ul class="nav nav-tabs">
         <li class="active nav-item"><a class="nav-link active" data-toggle="tab" href="#buy">Buy</a></li>
         <li class="nav-item"><a href="#sell" class="nav-link" data-toggle="tab">Sell</a></li>
