--- a/web/src/main/resources/templates/order.html
+++ b/web/src/main/resources/templates/order.html
@@ -86,6 +86,12 @@
             </table>
         </div>
         <br />
+        <div class="container-sm order-container" th:if="${order.getInitiator().getUsername().equals(username)}">
+            <h3>Order Actions</h3>
+            <form method="POST" th:action="@{/order/} + ${order.id} + '/markinactive'">
+                <input type="submit" value="suspend">
+            </form>
+        </div>
         <div class="container-sm order-container" th:unless="${order.getInitiator().getUsername().equals(username)}">
             <h3>Make Trade</h3>
             <form th:object="${offer}" method="POST" th:action="@{/order/} + ${order.id} + '/offer'">
