--- a/web/src/main/resources/templates/order_form.html
+++ b/web/src/main/resources/templates/order_form.html
@@ -55,6 +55,8 @@
                     <input type="number" id="minimum" th:field="*{min}">
                     <label for="maximum">max:</label>
                     <input type="number" id="maximum" th:field="*{max}">
+                    <label th:for="${#ids.next('removeOnOfferCompletion')}">Remove after successful order? </label>
+                    <input type="checkbox" th:field="*{removeOnOfferCompletion}" checked="false">
 
                     <input type="submit" value="Place Ad">
                     <input type="reset">
@@ -100,6 +102,8 @@
                     <input type="number" id="minimum" th:field="*{min}">
                     <label for="maximum">max:</label>
                     <input type="number" id="maximum" th:field="*{max}">
+                    <label th:for="${#ids.next('removeOnOfferCompletion')}">Remove after successful order? </label>
+                    <input type="checkbox" th:field="*{removeOnOfferCompletion}" checked="unchecked">
 
                     <input type="submit" value="Place Ad">
                     <input type="reset">
