--- a/web/src/main/resources/templates/home.html
+++ b/web/src/main/resources/templates/home.html
@@ -1,122 +1,133 @@
-﻿<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>PeerCoin</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Peercoin</title>
+    <!-- temporary bootstrap until @Tyler gets tab content working without it -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/home.css">
+    <script defer src="/js/home.js"></script>
     <script th:if="${signedin}" th:src="@{/js/notification.js}"></script>
-
 </head>
-
-    <body>
-    <header class="navbar-static-top" th:fragment="header">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/">Peercoin</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Orders</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item dropdown-item-dark" href="/order/all">View Orders</a>
-                            <a class="dropdown-item" href="/order/submit">Place Orders</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/wallet">Wallet</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/offer/all">Offers</a>
-                    </li>
+<body>
+    <header>
+        <div class="navigation">
+            <a href="/"><img src="./images/logo.svg" class="logo"></a>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/order/all">Orders</a></li>
+                    <li><a href="/wallet">Wallet</a></li>
+                    <li><a href="/offer/all">Offers</a></li>
                 </ul>
-                <div>
-
-                    <div th:if="${signedin}==true" style="float:right;">
-                        <div id="notification-dropdown" class="dropdown" onmouseenter="receiveNotification();">
-                            <a class="btn btn-primary">Notifications</a>
-                            <div class="dropdown-content">
-                                <div id="notifications">
-                                </div>
-                            </div>
-                        </div>
-                        <span>&ensp;&ensp;&ensp;</span>
-                        <span class="btn btn-primary" th:text="${username}">username</span>
-                    </div>
-                    <div id="login" th:if="${signedin}==false">
-                        <a href="/login">Login</a>
-                        <a href="/register">register</a>
+            </nav>
+        </div>
+        <div th:if="${signedin}" style="float:right;">
+            <div id="notification-dropdown" class="dropdown" onmouseenter="receiveNotification();">
+                <a class="btn btn-primary">Notifications</a>
+                <div class="dropdown-content">
+                    <div id="notifications">
                     </div>
                 </div>
             </div>
-        </nav>
+            <span>&ensp;&ensp;&ensp;</span>
+            <span class="btn btn-primary" th:text="${username}">username</span>
+        </div>
+        <div class="Login" th:unless="${signedin}">
+            <a id="login-btn" class="login-btn">Sign In</a>
+            <button class = "registration-btn">Register</button>
+        </div>
     </header>
-        <div class="mx-auto" style="width: 250px;">
-            <img src="/images/logo.svg" alt="logo" width="350" height="300" />
-        </div>
-        <ul class="nav nav-tabs">
-            <li class="active nav-item"><a class="nav-link active" data-toggle="tab" href="#buy">Buy</a></li>
-            <li class="nav-item"><a href="#sell" class="nav-link" data-toggle="tab">Sell</a></li>
-        </ul>
-        <div class="tab-content">
-            <div id="buy" class="tab-pane fade show active">
-                <table class="table table-striped table-dark table-hover">
-                    <tr class="thead-dark">
-                        <th></th>
-                        <th>crypto</th>
-                        <th>payment</th>
-                        <th>method</th>
-                        <th>rate</th>
-                        <th>Quantity</th>
-                    </tr>
-                    <th:block th:each="order : ${sellOrders}">
-                            <tr>
-
-                                <td th:text="${order.initiator.getUsername()}"></td>
-                                <td th:text="${order.crypto.getName()}"></td>
-                                <td th:text="${order.payment.getName()}"></td>
-                                <td th:text="${order.method.getName()}"></td>
-                                <td th:text="${order.exchangeRate}"></td>
-                                <td th:text="${order.min} + ' - ' + ${order.max}"></td>
-                                <td><a role="button" class="btn btn-info" th:href="@{/order/} + ${order.id}">Order</a></td>
+    <div class="sign-in-card" id="sign-in-card">
+        <form method="POST" name="f" action="login">
+            <h1>Login</h1>
+            <label for="username" >Username</label>
+            <input type="text" id="username" name="username" value="">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" value="">
+            <div class="passwd-sign-in">
+                <div>
+                    <input type="checkbox" name="stay-in">
+                    <label for="stay-in">Stay signed in</label>
+                </div>
+                <a href="" class="passwd-forget">Forget Password?</a>
+            </div>
+            <button class="login-btn">Login</button>
+        </form>
+    </div>
+    <div id="overlay"></div>
+    <div class="container">
+        <main>
+            <div class="intro-card">
+                <div>
+                <h1>Peercoin</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, ab? Iure amet odit hic voluptatum a quam velit iste quos?</p>
+                <a href="/register" class="registration-button">Sign up</a>
+                </div>
+            </div>
+            <div class="analysis">
+              table 1
+            </div>
+            <div class="orders">
+                <ul class="nav nav-tabs">
+                    <li class="active nav-item"><a class="nav-link active" data-toggle="tab" href="#buy">Buy</a></li>
+                    <li class="nav-item"><a href="#sell" class="nav-link" data-toggle="tab">Sell</a></li>
+                </ul>
+                <div class="tab-content">
+                    <div id="buy" class="tab-pane fade show active">
+                        <table class="table table-striped table-dark table-hover">
+                            <tr class="thead-dark">
+                                <th></th>
+                                <th>crypto</th>
+                                <th>payment</th>
+                                <th>method</th>
+                                <th>rate</th>
+                                <th>Quantity</th>
                             </tr>
-                    </th:block>
-                </table>
+                            <th:block th:each="order : ${sellOrders}">
+                                    <tr>
+        
+                                        <td th:text="${order.initiator.getUsername()}"></td>
+                                        <td th:text="${order.crypto.getName()}"></td>
+                                        <td th:text="${order.payment.getName()}"></td>
+                                        <td th:text="${order.method.getName()}"></td>
+                                        <td th:text="${order.exchangeRate}"></td>
+                                        <td th:text="${order.min} + ' - ' + ${order.max}"></td>
+                                        <td><a role="button" class="btn btn-info" th:href="@{/order/} + ${order.id}">Order</a></td>
+                                    </tr>
+                            </th:block>
+                        </table>
+                    </div>
+                    <div id="sell" class="tab-pane fade">
+                        <table class="table table-striped table-dark table-hover">
+                            <tr class="thead-dark">
+                                <th></th>
+                                <th>crypto</th>
+                                <th>payment</th>
+                                <th>method</th>
+                                <th>rate</th>
+                                <th>asking range</th>
+                            </tr>
+                            <th:block th:each="order : ${buyOrders}">
+                                <tr>
+                                    <td th:text="${order.initiator.getUsername()}"></td>
+                                    <td th:text="${order.crypto.getName()}"></td>
+                                    <td th:text="${order.payment.getName()}"></td>
+                                    <td th:text="${order.method.getName()}"></td>
+                                    <td th:text="${order.exchangeRate}"></td>
+                                    <td th:text="${order.min} + ' - ' + ${order.max}"></td>
+                                    <td><a role="button" class="btn btn-info" th:href="@{/order/} + ${order.id}">order</a></td>
+                                </tr>
+                            </th:block>
+                        </table>
+                    </div>
+                </div>
             </div>
-            <div id="sell" class="tab-pane fade">
-                <table class="table table-striped table-dark table-hover">
-                    <tr class="thead-dark">
-                        <th></th>
-                        <th>crypto</th>
-                        <th>payment</th>
-                        <th>method</th>
-                        <th>rate</th>
-                        <th>asking range</th>
-                    </tr>
-                    <th:block th:each="order : ${buyOrders}">
-                        <tr>
-                            <td th:text="${order.initiator.getUsername()}"></td>
-                            <td th:text="${order.crypto.getName()}"></td>
-                            <td th:text="${order.payment.getName()}"></td>
-                            <td th:text="${order.method.getName()}"></td>
-                            <td th:text="${order.exchangeRate}"></td>
-                            <td th:text="${order.min} + ' - ' + ${order.max}"></td>
-                            <td><a role="button" class="btn btn-info" th:href="@{/order/} + ${order.id}">order</a></td>
-                        </tr>
-                    </th:block>
-                </table>
-            </div>
-        </div>
-
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        </main>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    </body>
+</body>
 </html>
