--- a/web/src/main/resources/templates/register.html
+++ b/web/src/main/resources/templates/register.html
@@ -1,28 +1,53 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
     <head>
-        <title>Registration</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="stylesheet" href="/css/registration.css"> 
         <meta charset="utf-8">
-        <link rel="stylesheet" href="/css/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Registration</title>
     </head>
     <body>
-        <form method="POST" th:action="@{/register}" th:object="${user}">
-            <label for="username">Username:</label>
-            <input type="text" id="username" th:field="*{username}">
+        <header>
+            <div class = "navigation">
+                <a href="/"><h1 class="logo">Peercoin</h1></a>
+                <nav>
+                    <ul>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/order/all">Orders</a></li>
+                        <li><a href="/wallet">Wallet</a></li>
+                        <li><a href="/offer/all">Offers</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="header-login">
+                <a href="/login"><h2>Sign In</h2></a>
+                <button href="/register">Register</button>
+            </div>
+        </header>
+        <div class="container">
+            <div class="slideshow">
+                slideshow
+            </div>
+            <div class="table-display">
+                table
+            </div>
+            <div class="registration-form">
+                <form method="POST"  th:action="@{/register}" th:object="${user}" class="registration-form-class">
+                    <h1>Create Account</h1>
+                    
+                    <input type="text" id="username" th:field="*{username}" name="username" placeholder="Username" value="">
+                    <input type="text" id="email" th:field="*{email}" name="email" placeholder="Email" value="">
+                    <input type="password" id="password" th:field="*{password}" name="password" placeholder="Password" value="">
 
-            <label for="password">Password:</label>
-            <input type="password" id="password" th:field="*{password}">
-
-            <label for="confirmPassword">Confirm:</label>
-            <input type="password" id="confirmPassword" th:field="*{confirmPassword}">
-            <input type="submit">
-            <input type="reset">
-        </form>
-
+                    <input type="password" id="confirmPassword" th:field="*{confirmPassword}" placeholder="Confirm Password" name="confirmPassword" value="">
+                    <button type="input">Submit</button>
+               </form>
+            </div>
+        </div>
+        <script src="/javascript/registration.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     </body>
-</html>
+    </html>
