--- a/web/src/main/resources/templates/home.html
+++ b/web/src/main/resources/templates/home.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peercoin</title>
     <!-- temporary bootstrap until @Tyler gets tab content working without it -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">-->
     <link rel="stylesheet" href="/css/home.css">
-    <script defer src="/js/home.js"></script>
+    <!--<script defer src="/js/home.js"></script>-->
     <script th:if="${signedin}" th:src="@{/js/notification.js}"></script>
 </head>
 <body>
@@ -32,11 +32,18 @@
                 </div>
             </div>
             <span>&ensp;&ensp;&ensp;</span>
-            <span class="btn btn-primary" th:text="${username}">username</span>
+            <div class="user">
+                <span class="user-name" th:text="${username}">username</span>
+                <div id="user" class="user-drop-down">
+                    <ul>
+                        <li>Log Out</li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="Login" th:unless="${signedin}">
-            <a id="login-btn" class="login-btn">Sign In</a>
-            <button class = "registration-btn">Register</button>
+            <a id="login-btn" class="login-btn active">Sign In</a>
+            <button class = "registration-btn"><a href="/register">Register</a></button>
         </div>
     </header>
     <div class="sign-in-card" id="sign-in-card">
@@ -58,76 +65,80 @@
     </div>
     <div id="overlay"></div>
     <div class="container">
-        <main>
+        <main th:unless="${signedin}">
             <div class="intro-card">
                 <div>
-                <h1>Peercoin</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, ab? Iure amet odit hic voluptatum a quam velit iste quos?</p>
-                <a href="/register" class="registration-button">Sign up</a>
+                    <h1>Peercoin</h1>
+                    <p>The number one place to buy, sell, and barter your choice of crypto currency from peer to peer to and from anywhere in the world. Don't already have an account? Sign up today!</p>
+                    <a href="/register" class="registration-button">Sign up</a>
                 </div>
             </div>
             <div class="analysis">
-              table 1
+              <table class="analysis-table">
+                  <thead>
+                    <tr>
+                        <th>Crypto</th>
+                        <th>Rate</th>
+                        <th>Price</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                        <td>fill</td>
+                        <td>fill</td>
+                        <td>fill</td>
+                    </tr>
+                    <tr>
+                        <td>fill</td>
+                        <td>fill</td>
+                        <td>fill</td>
+                    </tr>
+                    <tr>
+                        <td>fill</td>
+                        <td>fill</td>
+                        <td>fill</td>
+                    </tr>
+                    <tr>
+                        <td>fill</td>
+                        <td>fill</td>
+                        <td>fill</td>
+                    </tr>
+                    <tr>
+                        <td>fill</td>
+                        <td>fill</td>
+                        <td>fill</td>
+                    </tr>
+                    <tr>
+                        <td>fill</td>
+                        <td>fill</td>
+                        <td>fill</td>
+                    </tr>
+                  </tbody>
+              </table>
             </div>
-            <div class="orders">
-                <ul class="nav nav-tabs">
-                    <li class="active nav-item"><a class="nav-link active" data-toggle="tab" href="#buy">Buy</a></li>
-                    <li class="nav-item"><a href="#sell" class="nav-link" data-toggle="tab">Sell</a></li>
-                </ul>
-                <div class="tab-content">
-                    <div id="buy" class="tab-pane fade show active">
-                        <table class="table table-striped table-dark table-hover">
-                            <tr class="thead-dark">
-                                <th></th>
-                                <th>crypto</th>
-                                <th>payment</th>
-                                <th>method</th>
-                                <th>rate</th>
-                                <th>Quantity</th>
-                            </tr>
-                            <th:block th:each="order : ${sellOrders}">
-                                    <tr>
-        
-                                        <td th:text="${order.initiator.getUsername()}"></td>
-                                        <td th:text="${order.crypto.getName()}"></td>
-                                        <td th:text="${order.payment.getName()}"></td>
-                                        <td th:text="${order.method.getName()}"></td>
-                                        <td th:text="${order.exchangeRate}"></td>
-                                        <td th:text="${order.min} + ' - ' + ${order.max}"></td>
-                                        <td><a role="button" class="btn btn-info" th:href="@{/order/} + ${order.id}">Order</a></td>
-                                    </tr>
-                            </th:block>
-                        </table>
-                    </div>
-                    <div id="sell" class="tab-pane fade">
-                        <table class="table table-striped table-dark table-hover">
-                            <tr class="thead-dark">
-                                <th></th>
-                                <th>crypto</th>
-                                <th>payment</th>
-                                <th>method</th>
-                                <th>rate</th>
-                                <th>asking range</th>
-                            </tr>
-                            <th:block th:each="order : ${buyOrders}">
-                                <tr>
-                                    <td th:text="${order.initiator.getUsername()}"></td>
-                                    <td th:text="${order.crypto.getName()}"></td>
-                                    <td th:text="${order.payment.getName()}"></td>
-                                    <td th:text="${order.method.getName()}"></td>
-                                    <td th:text="${order.exchangeRate}"></td>
-                                    <td th:text="${order.min} + ' - ' + ${order.max}"></td>
-                                    <td><a role="button" class="btn btn-info" th:href="@{/order/} + ${order.id}">order</a></td>
-                                </tr>
-                            </th:block>
-                        </table>
-                    </div>
-                </div>
-            </div>
+        </main>
+        <main th:if="${signedin}">
+            user signed in
         </main>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script>
+        document.getElementById('login-btn').addEventListener('click', e => {
+            document.getElementById('sign-in-card').classList.add('active');
+            document.getElementById('overlay').classList.add('active');
+        })
+
+        document.getElementById('overlay').addEventListener('click', e => {
+            if(document.getElementById('overlay').classList.contains('active')) {
+                document.getElementById('overlay').classList.remove('active');
+                document.getElementById('sign-in-card').classList.remove('active');
+            }
+            else {
+                return;
+            }
+        })
+    </script>
 </body>
 </html>
